--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
           </form>
         </div>
 
-        <div class="col-md-6">
-          <div id="app"></div>
+        <div class="col-md-6" id="yaml">
         </div>
 
       </div>
