Babel build and minified output, introducted Grunt

--- a/index.html
+++ b/index.html
@@ -2,11 +2,6 @@
 <html>
   <head>
     <title>Year in pictures yaml</title>
-    <script src="https://fb.me/react-0.14.7.min.js"></script>
-    <script src="https://fb.me/react-dom-0.14.7.min.js"></script>
-    <script src="lib/babel-browser.js"></script>
-    <script type="text/babel" src="form.js"></script>
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
@@ -14,5 +9,7 @@
   <body>
     <div class="container-fluid" id="app">
     </div>
+    <script src="js/react.js"></script>
+    <script src="js/output.js"></script>
   </body>
 </html>
