--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <div class="container-fluid" id="app">
     </div>
     <script src="js/react.js"></script>
-    <script src="js/output.js"></script>
+    <script src="js/app.js"></script>
   </body>
 </html>
